[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/game.gd" type="Script" id=1]
[ext_resource path="res://fonts/Chocolate Bar Demo.otf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/button.gd" type="Script" id=3]
[ext_resource path="res://scenes/punctuation.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/power_up_bar.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/cross.png" type="Texture" id=6]
[ext_resource path="res://music/Victory.ogg" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]

size = 120
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 350
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Animation" id=3]

resource_name = "count"
length = 1.7
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("label:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ "3", "2", "1", "GO!" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("label:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("label:custom_colors/font_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 0.703125, 0.0954008, 0.0494385, 1 ), Color( 0.856985, 0.863281, 0.0573273, 1 ), Color( 0.231684, 0.753906, 0.0647888, 1 ), Color( 0.231684, 0.753906, 0.0647888, 1 ) ]
}

[node name="game" type="Node" index="0"]

script = ExtResource( 1 )

[node name="interface" type="Node2D" parent="." index="0"]

[node name="menu" type="GridContainer" parent="interface" index="0"]

modulate = Color( 0.90625, 0.87793, 0.879921, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 409.0
margin_top = 363.0
margin_right = 1587.0
margin_bottom = 779.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
columns = 1
_sections_unfolded = [ "Material", "Theme", "Visibility" ]
__meta__ = {
"_edit_group_": true
}

[node name="button" type="Button" parent="interface/menu" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1178.0
margin_bottom = 136.0
rect_min_size = Vector2( 180, 60 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.0518951, 0.699219, 0.153039, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "START"
flat = false
align = 1
script = ExtResource( 3 )
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts", "custom_styles" ]
stage = "res://scenes/test_area.tscn"
music = "res://music/happy.ogg"

[node name="button2" type="Button" parent="interface/menu" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 140.0
margin_right = 1178.0
margin_bottom = 276.0
rect_min_size = Vector2( 180, 60 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_hover = Color( 0.652344, 0.0968323, 0.0968323, 1 )
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "SETTINGS"
flat = false
align = 1
script = ExtResource( 3 )
_sections_unfolded = [ "custom_colors", "custom_fonts" ]
stage = "res://scenes/test_area.tscn"
music = null

[node name="button3" type="Button" parent="interface/menu" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 280.0
margin_right = 1178.0
margin_bottom = 416.0
rect_min_size = Vector2( 180, 60 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_hover = Color( 0.75, 0.0849609, 0.0849609, 1 )
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "CHARACTER SELECTION"
flat = false
align = 1
script = ExtResource( 3 )
_sections_unfolded = [ "custom_colors", "custom_fonts" ]
stage = "res://scenes/test_area.tscn"
music = null

[node name="HUD" type="CanvasLayer" parent="." index="1"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="controls" type="Node2D" parent="HUD" index="0"]

[node name="punctuation" parent="HUD/controls" index="0" instance=ExtResource( 4 )]

[node name="power_up_bar" parent="HUD/controls" index="1" instance=ExtResource( 5 )]

[node name="countdown" type="Node2D" parent="HUD" index="1"]

position = Vector2( 960, 540 )
_sections_unfolded = [ "Transform" ]

[node name="label" type="Label" parent="HUD/countdown" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -277.0
margin_top = -197.0
margin_right = 279.0
margin_bottom = 178.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.231684, 0.753906, 0.0647888, 1 )
text = "GO!"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Visibility", "custom_colors", "custom_fonts" ]

[node name="animation" type="AnimationPlayer" parent="HUD/countdown" index="1"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/count = SubResource( 3 )
blend_times = [  ]

[node name="stage_exit" type="TextureButton" parent="HUD" index="2"]

modulate = Color( 0.632813, 0.0444946, 0.0444946, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1790.0
margin_right = 1917.0
margin_bottom = 135.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 3
_sections_unfolded = [ "Material", "Rect", "Textures", "Visibility" ]

[node name="stream_victory" type="AudioStreamPlayer" parent="." index="2"]

stream = ExtResource( 7 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "fx"

[node name="music" type="AudioStreamPlayer" parent="." index="3"]

stream = null
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "fx"

[connection signal="pressed" from="interface/menu/button" to="interface/menu/button" method="_on_button_pressed"]

[connection signal="pressed" from="interface/menu/button2" to="interface/menu/button2" method="_on_button_pressed"]

[connection signal="pressed" from="interface/menu/button3" to="interface/menu/button3" method="_on_button_pressed"]

[connection signal="pressed" from="HUD/stage_exit" to="." method="_on_stage_exit_pressed"]


